--- a/App Update.json
+++ b/App Update.json
@@ -1,6 +1,6 @@
 {
-  "versionCode": 10,
-  "versionName": "1.0",
+  "versionCode": 240971000,
+  "versionName": "2.24.9.72",
   "Msg": "New update is available, to continue in our app please update it.
 
 What's new:
